create many component and create body page app.js

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    background-color: black;
+    background-color: #0D0023;
     font-family: 'PT Sans', sans-serif;
   }
 }
