--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    background-color: #0D0023;
-    font-family: 'PT Sans', sans-serif;
+      background-image: url('./components/img/background.png');
+      background-size: cover;
   }
 }
