modifie Sidebar and page Home added overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-      background-image: url('./components/img/background.png');
-      background-size: cover;
+      background-color: #080016;
+      overflow: hidden;
   }
 }
